2007-02-07  Martin Leidig  <mleidig@schlund.de>

	* projects/core/conf/server-config.wsdd: Added
	* projects/common/conf/server-config.wsdd: Removed as obsolete
	* skel/projects/common/conf/server-config.wsdd: Removed as obsolete
	* skel/build-skel.xml: Changed location of server-config.wsdd

2007-02-02  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/generator/IWrapperImpl.java: 
	* src/de/schlund/pfixcore/workflow/app/IWrapperSimpleContainer.java:
	some Hash* -> Tree* to gain dependable output ordering in the DOM tree.

2007-01-30  Martin Leidig  <mleidig@schlund.de>

	Extended distribution file naming opportunities. Now you can use
	three different version naming conventions (set via the "${dist.type}"
	property in the build file or as ant parameter): "release" uses 
	"${dist.version}", "prerelease" uses "${dist.version}-pre" and
	"build" uses "${dist.version}-${dist.revision}" (svn revision) as
	version part. Default is "build", e.g. it can be overriden via
	"ant -Ddist.type=release dist". 
	   
	* build.xml

2007-01-26  Martin Leidig  <mleidig@schlund.de>

	Trim attribute now only supports boolean values, removed on/off
	option (cause someone didn't like and I don't mind)
	* projects/core/build/iwrapper.xsl	
	* projects/core/schema/interfacewrapper200401.xsd

2007-01-26  Martin Leidig  <mleidig@schlund.de>

	* projects/core/build/create_depend.xsl: fixed strange incompatibility
	between saxon and xalan transformations, which  could cause wrong output 
	encoding	

2007-01-23  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/targets/TargetGenerator.java: removed resetting
	of TargetGenerationReport before each generation iteration (this caused
	that generation exceptions were not reported in exception summary)
	* src/de/schlund/pfixxml/ImageGeometry.java: avoid NullPointerException
	if image doesn't exist, just proceed without the image information (it's
	a common case cause in a lot of projects users wrongly use attribute